day-62-aws-networking/main.tf
#VPC

resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr

  tags = {

    Name = "${var.project}-vpc"

  }

}

# Subnet:


resource "aws_subnet" "public" {

  vpc_id = aws_vpc.main.id

  cidr_block = var.subnet_cidr

  map_public_ip_on_launch = true

  tags = {

    Name = "${var.project}-subnet"

  }

}

# Internet gateway:

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id

  tags = {

    Name = "${var.project}-igw"

  }

}

# Route table:

resource "aws_route_table" "public_rt" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }

  tags = {

    Name = "${var.project}-rt"

  }

}


# Route Association

resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public_rt.id

}


# Security Group

resource "aws_security_group" "web_sg" {

  name = "terraweek-sg"

  vpc_id = aws_vpc.main.id

  ingress {

    description = "SSH"

    from_port = 22

    to_port = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {

    description = "HTTP"

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "${var.project}-sg"

  }

}

# EC2:

resource "aws_instance" "server" {

  ami = var.ami

  instance_type = var.instance_type

  subnet_id = aws_subnet.public.id

  vpc_security_group_ids = [

    aws_security_group.web_sg.id

  ]

  associate_public_ip_address = true

  tags = {

    Name = "${var.project}-server"

  }

}
